Wheel-events fails temporarily after reload https://bugs.webkit.org/show_bug.cgi?id=94934

Reviewed by Kenneth Rohde Christiansen.

Set fixed visible content rect using visibleContentBounds instead of WebPage::size. Otherwise the
content rect will be incorrectly set to the entire document size, when resizesToContents is active.

Test: UIProcess/API/qt/tests/qmltests/WebView/tst_wheelEventHandling.qml

* UIProcess/API/qt/tests/qmltests/WebView/tst_wheelEventHandling.qml:
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::transitionToCommittedForNewPage):


Canonical link: https://commits.webkit.org/113578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127420 268f45cc-cd09-0410-ab3c-d52691b4dbfc